<resources>

    <string name="username">Usuário</string>
    <string name="password">Senha</string>
    <string name="new_password">Nova Senha</string>

    <string name="app_name">SAMHA Mobile</string>
    <string name="text_selection">Selecione o ano e semestre:</string>
    <string name="text_class">Turma:</string>
    <string name="search">Buscar</string>
    <string name="sigin">Entrar</string>
    <string name="alterar">Alterar</string>
    <string name="acessar_conta">Acesse sua conta</string>
    <string name="informar_nova_senha">Informe sua nova senha</string>
    <string name="email">Email</string>
    <string name="botao_ok">OK</string>
    <string name="menu_back">Voltar</string>
    <string name="bem_vindo">Bem-Vindo ao</string>
    <string name="botao_ok_entendi">OK, Entendi.</string>
    <string name="github">https://github.com/ChrysthianMoizes</string>
    <string name="aluno">Aluno</string>
    <string name="professor">Professor</string>
    <string name="quem_e_voce">Quem é você?</string>
    <string name="sair">Sair</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="alterar_senha">Alterar Senha</string>

    <string name="erro_servidor">Falha na conexão</string>
    <string name="message_erro">Erro ao conectar-se ao servidor, verifique sua conexão com a internet e tente novamente.</string>

    <string name="erro_turmas_ativas">Turma não encontrada</string>
    <string name="message_turmas_ativas">Nenhuma turma foi encontrada, verifique o ano e semestre selecionados e tente novamente.</string>

    <string name="erro_aulas_turma">Turma sem aulas</string>
    <string name="message_aulas_turma">A turma selecionada não possui aulas cadastradas no ano e semestre solicitados, corrija as informações e tente novamente.</string>

    <string name="erro_aulas_professor">Professor sem aulas</string>
    <string name="message_aulas_professor">Você ainda não possui aulas cadastradas no ano e semestre selecionados, corrija as informações e tente novamente.</string>

    <string-array name="days">
        <item>SEG</item>
        <item>TER</item>
        <item>QUA</item>
        <item>QUI</item>
        <item>SEX</item>
    </string-array>

    <string-array name="times_matutino">
        <item>07:00</item>
        <item>07:55</item>
        <item>08:50</item>
        <item>10:00</item>
        <item>10:55</item>
        <item>11:50</item>
    </string-array>

    <string-array name="times_vespertino">
        <item>12:50</item>
        <item>13:45</item>
        <item>14:40</item>
        <item>15:50</item>
        <item>16:45</item>
        <item>17:40</item>
    </string-array>

    <string-array name="times_noturno">
        <item>18:50</item>
        <item>19:35</item>
        <item>20:30</item>
        <item>21:15</item>
        <item>--</item>
        <item>--</item>
    </string-array>

    <string-array name="turnos">
        <item>MATUTINO</item>
        <item>VESPERTINO</item>
        <item>NOTURNO</item>
    </string-array>

    <string name="title_activity_menu">Olá Professor!</string>
    <string name="navigation_drawer_open">Abrir menu de navegação</string>
    <string name="navigation_drawer_close">Fechar menu drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
