<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AlterarSenhaActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar_alterar_senha"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/informar_nova_senha"
        android:textColor="@color/color_sec"
        android:textSize="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="110dp"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtNovaSenha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/new_password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnAlterar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/ripple_rect"
            android:text="@string/alterar" />

        <ProgressBar
            android:id="@+id/progressBarAlterar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:visibility="invisible" />

    </LinearLayout>

</LinearLayout>