<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TelaPrincipal"
    android:orientation="vertical">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar_inicial"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtBemVindo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/bem_vindo"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/samha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="SAMHA"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtAno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/text_selection"
            android:textColor="@color/color_sec"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <NumberPicker
                android:id="@+id/npAno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="40dp"/>

            <NumberPicker
                android:id="@+id/npSemestre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:layout_marginStart="30dp"
                android:gravity="center" />

            <Button
                android:id="@+id/btnTurma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_rect"
                android:text="@string/botao_ok" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/txtTurmas"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:gravity="center"
                android:text="@string/text_class"
                android:textColor="@color/color_sec"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spnTurmas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ripple_rect"
            android:text="@string/search" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:visibility="invisible" />


    </LinearLayout>


</LinearLayout>