<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar_main"/>

    <TextView
        android:id="@+id/txtBemVindo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/bem_vindo"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/samha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="SAMHA"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_option"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/btnAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ripple_rect"
            android:text="@string/aluno" />

        <Button
            android:id="@+id/btnProfessor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ripple_rect"
            android:text="@string/professor" />

    </LinearLayout>



</LinearLayout>